--- a/style.css
+++ b/style.css
@@ -1,10 +1,4 @@
-/*
-    Theme Name: MyResume
-    Theme URL: https://bootstrapmade.com/free-html-bootstrap-template-my-resume/
-    Author: BootstrapMade
-    Author URL: https://bootstrapmade.com
-*/
-/* --- General --- */
+
 body {
 	font-family:'Montserrat',sans-serif;
 	font-size:16px;
@@ -874,4 +868,9 @@ blockquote cite {
 }
 blockquote cite:before {
 	content: "\2014 \2009";
+}
+.heading h3 {
+    font-size: 16px;
+    line-height: 1.7;
+    text-align: justify;
 }
